welcome.lessons.welcome.bat.bool2.RedTicket.scala.code
def redTicket(a:Int, b:Int, c:Int):Int = {
	var x:Boolean=false;
	var T=Array(a,b,c);

	if (T(0)==2&&T(1)==2&&T(2)==2) {
		x= 10
	}
	else if (T(0)==T(1)&&T(1)==T(2)) {
		x=5
	}
	else if (T(1)!=T(0)&&T(2)!=T(0)) {
		x=1
	}
	else x=0;
	return x
}
